# max_express_bot

./: .env-example  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
.sqlx/: query-7bf62e70f0681e4a2d185c9c83c8f90ed6c9c41555529752851e1e82650ce5e0.json  query-91bfd180324426768faaecbc48951f6e09f53daa76eebcfad63cd990d6f89b61.json
src/: bot.rs  database.rs  main.rs  models.rs  vendor.rs
