[package]
name = "max_express_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
dptree = "0.3.0"
env_logger = "0.11.3"
indoc = "2.0.5"
log = "0.4.21"
reqwest = "0.12.4"
serde = "1.0.198"
serde_json = "1.0.116"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "postgres", "macros"] }
teloxide = "0.12.2"
teloxide-macros = "0.7.1"
tokio = { version = "1.37.0", features = ["full"] }
